added 'showExtra' option to form-field wrapper props

--- a/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.html
+++ b/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.html
@@ -1,7 +1,7 @@
 <form
   *ngIf="hideMpSelect$ | ngrxPush"
   nz-form
-  nzLayout="inline"
+  [nzLayout]="simpleMpLayout"
   [formGroup]="simpleMpForm">
   <formly-form
     [form]="simpleMpForm"
