--- a/client/src/app/forms2/wrappers/form-field/form-field.wrapper.less
+++ b/client/src/app/forms2/wrappers/form-field/form-field.wrapper.less
@@ -3,6 +3,17 @@
 @helpIconSize: 14px;
 @helpIconColor: #cfcfdf;
 
+.layout-vertical ::ng-deep nz-form-item:first-of-type {
+  flex-direction: column;
+}
+
+.layout-horizontal ::ng-deep nz-form-item:first-of-type {
+  flex-direction: inherit;
+}
+
+.layout-inline ::ng-deep nz-form-item:first-of-type {
+  flex-direction: inherit;
+}
 .cvc-field-label() {
   label {
     // remove label's before/after content
@@ -19,10 +30,6 @@
         content: '';
       }
     }
-  }
-  .ant-form-item-tooltip {
-    margin-top: -3px;
-    font-size: 9px;
   }
   ::ng-deep span.label {
     padding-right: 4px;
@@ -70,33 +77,12 @@ nz-form-item.layout-horizontal {
   ::ng-deep nz-form-label:first-of-type {
     .cvc-field-label();
   }
-  .help-tooltip {
-    text-align: right;
-    line-height: 26px;
-    span.icon-tooltip {
-      font-size: @helpIconSize;
-      color: @helpIconColor;
-      cursor: help;
-    }
-    span.icon-spacer {
-      background-color: red;
-      font-size: @helpIconSize;
-      opacity: 0;
-    }
-  }
 }
 
 nz-form-item.layout-vertical {
   .cvc-form-field-card();
   ::ng-deep nz-form-label:first-of-type {
     .cvc-field-label();
-    span.icon-tooltip {
-      padding-left: 3px;
-      // margin-top: -5px;
-      color: @helpIconColor;
-      font-size: @helpIconSize / 4;
-      cursor: help;
-    }
   }
 
   margin-bottom: @margin-lg;
@@ -105,13 +91,7 @@ nz-form-item.layout-vertical {
 nz-form-item.layout-inline {
   ::ng-deep nz-form-label:first-of-type {
     .cvc-field-label();
+    text-align: right;
     margin-right: 6px;
-  }
-  span.icon-tooltip {
-    padding-left: 3px;
-    margin-top: -5px;
-    color: @helpIconColor;
-    font-size: @helpIconSize / 4;
-    cursor: help;
   }
 }
