--- a/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.html
+++ b/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.html
@@ -1,32 +1,52 @@
-<form
-  *ngIf="hideMpSelect$ | ngrxPush"
-  nz-form
-  [nzLayout]="simpleMpLayout"
-  [formGroup]="simpleMpForm">
-  <formly-form
-    [form]="simpleMpForm"
-    [fields]="simpleMpConfig"
-    [model]="simpleMpModel"
-    [options]="simpleMpOptions"
-    (modelChange)="simpleMpFormChange$.next($event)">
-  </formly-form>
-</form>
-<cvc-entity-select
-  *ngIf="!(hideMpSelect$ | ngrxPush)"
-  [cvcSelectMode]="props.isMultiSelect ? 'multiple' : 'default'"
-  [cvcCustomTemplate]="selectedTemplate"
-  [cvcFormControl]="formControl"
-  [cvcFormlyAttributes]="field"
-  [cvcEntityName]="props.entityName"
-  [cvcPlaceholder]="(placeholder$ | ngrxPush)!"
-  [cvcResults]="result$ | ngrxPush"
-  [cvcDisabled]="props.disabled"
-  [cvcOptions]="selectOption$ | ngrxPush"
-  [cvcShowError]="showError"
-  [cvcLoading]="isLoading$ | ngrxPush"
-  (cvcOnSearch)="onSearch$.next($event)"
-  (cvcOnModelChange)="props.change && props.change(field, $event)">
-</cvc-entity-select>
+<nz-row [nzGutter]="[4, 4]">
+  <nz-col nzFlex="auto">
+    <form
+      *ngIf="hideMpSelect$ | ngrxPush"
+      nz-form
+      [nzLayout]="simpleMpLayout"
+      [formGroup]="simpleMpForm">
+      <formly-form
+        [form]="simpleMpForm"
+        [fields]="simpleMpConfig"
+        [model]="simpleMpModel"
+        [options]="simpleMpOptions"
+        (modelChange)="simpleMpFormChange$.next($event)">
+      </formly-form>
+    </form>
+    <cvc-entity-select
+      *ngIf="!(hideMpSelect$ | ngrxPush)"
+      [cvcSelectMode]="props.isMultiSelect ? 'multiple' : 'default'"
+      [cvcCustomTemplate]="selectedTemplate"
+      [cvcFormControl]="formControl"
+      [cvcFormlyAttributes]="field"
+      [cvcEntityName]="props.entityName"
+      [cvcPlaceholder]="(placeholder$ | ngrxPush)!"
+      [cvcResults]="result$ | ngrxPush"
+      [cvcDisabled]="props.disabled"
+      [cvcOptions]="selectOption$ | ngrxPush"
+      [cvcShowError]="showError"
+      [cvcLoading]="isLoading$ | ngrxPush"
+      (cvcOnSearch)="onSearch$.next($event)"
+      (cvcOnModelChange)="props.change && props.change(field, $event)">
+    </cvc-entity-select>
+  </nz-col>
+  <nz-col nzFlex="50px">
+    <button
+      type="button"
+      nz-button
+      nzBlock
+      (click)="showExpression = !showExpression">
+      EXP
+    </button>
+  </nz-col>
+</nz-row>
+<nz-row
+  [nzGutter]="[4, 4]"
+  *ngIf="showExpression">
+  <nz-col nzSpan="24">
+    <div style="height: 300px">MP EXPRESSION FORM HERE!</div>
+  </nz-col>
+</nz-row>
 <!-- select option templates -->
 <!-- result$ updates generate an array of #optionTemplates. entity-tag-field.mixin watches #optionTemplates changes, and attaches each to an NzSelectOptionTemplateInterface object, which are emitted from selectOption$. selectOption$ is passed to <cvc-entity-select> via [cvcOptions] above -->
 <ng-container *ngrxLet="onSearch$ as searchString">
