better form-field col logic for horizontal layout

--- a/client/src/app/forms2/wrappers/field-grid/field-grid.wrapper.less
+++ b/client/src/app/forms2/wrappers/field-grid/field-grid.wrapper.less
@@ -3,7 +3,7 @@
 .cvc-grid-cols(@columns) {
   display: grid;
   grid-template-columns: repeat(@columns, 1fr);
-  gap: @margin-lg;
+  gap: @margin-sm;
 }
 
 .field-grid {
