--- a/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
@@ -52,8 +52,7 @@
         <th nzWidth="150px">
           Genes
         </th>
-        <th nzWidth="200px"
-          nzLeft>
+        <th nzWidth="200px">
           Variants
         </th>
         <th nzWidth="250px">
@@ -182,7 +181,7 @@
               [maxDisplayCount]="1"
               [matchingText]="therapyNameInput"> </cvc-tag-overflow>
           </td>
-          <td nzRigh
+          <td nzRight
             nzAlign="right">{{mp.molecularProfileScore | number }}</td>
           <td nzRight
             nzAlign="right">{{ mp.evidenceItemCount | number }}</td>
