--- a/client/src/app/views/curation/curation-queues/curation-queues.view.html
+++ b/client/src/app/views/curation/curation-queues/curation-queues.view.html
@@ -18,7 +18,7 @@
         <p nz-typography
           nzEllipsis
           nzExpandable
-          [nzEllipsisRows]="2">New submitted Evidence, Assertions, and Source Suggestions must be accepted by a CIViC Editor. These Curation Queues list items in need of Editor moderation.</p>
+          [nzEllipsisRows]="2">New submitted Evidence, Assertions, Revisions, and Source Suggestions must be accepted by a CIViC Editor. These Curation Queues list items in need of Editor moderation.</p>
       </nz-col>
       <nz-col nzFlex="auto"
         class="header-links">
