Add creation comment to the revision popover
Unfortunately, these can not be displayed as a cvc-comment-body in this
context because that module itself imports the revision tag (and
popover) components, resulting in a circular dependency.

--- a/client/src/app/components/revisions/revision-popover/revision-popover.component.html
+++ b/client/src/app/components/revisions/revision-popover/revision-popover.component.html
@@ -52,6 +52,9 @@
         <nz-descriptions-item nzTitle="Revision Date">
           {{ r.createdAt | timeago }}
         </nz-descriptions-item>
+        <nz-descriptions-item nzTitle="Creation Comment">
+          {{ r.creationComment.comment }}
+        </nz-descriptions-item>
       </nz-descriptions>
     </nz-card>
   </ng-container>
