--- a/client/src/app/forms2/types/molecular-profile-select/mp-finder/mp-finder.component.html
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-finder/mp-finder.component.html
@@ -7,6 +7,6 @@
     [fields]="config"
     [model]="model"
     [options]="options"
-    (modelChange)="modelChange$.next($event)">
+    (modelChange)="modelChange($event)">
   </formly-form>
 </form>
