--- a/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
@@ -9,6 +9,7 @@
 .expression-preview {
     width: 100%;
     padding: 4px;
+    background-color: white;
     border: 1px solid #CCCCCC;
     border-radius: 2px;
 }
