--- a/client/src/app/forms2/wrappers/form-field/form-field.wrapper.html
+++ b/client/src/app/forms2/wrappers/form-field/form-field.wrapper.html
@@ -20,7 +20,12 @@
   <nz-form-item
     [nzGutter]="wrapper.layout.item.gutter"
     class="layout-horizontal"
-    [ngClass]="{ showBorders: props.showBorders }">
+    [ngClass]="{
+      disabled: props.disabled,
+      error: showError,
+      required: props.required,
+      valid: field.formControl!.status === 'VALID'
+    }">
     <ng-container *ngIf="props.label && props.hideLabel !== true">
       <nz-form-label
         *ngrxLet="wrapper.layout.label as label"
@@ -52,7 +57,8 @@
     [ngClass]="{
       disabled: props.disabled,
       error: showError,
-      required: props.required
+      required: props.required,
+      valid: field.formControl!.status === 'VALID'
     }">
     <ng-container *ngIf="props.label && props.hideLabel !== true">
       <nz-form-label
@@ -80,7 +86,13 @@
 </ng-template>
 
 <ng-template #inlineFieldWrapper>
-  <nz-form-item class="layout-inline">
+  <nz-form-item class="layout-inline"
+  [ngClass]="{
+      disabled: props.disabled,
+      error: showError,
+      required: props.required,
+      valid: field.formControl!.status === 'VALID'
+    }">
     <ng-container *ngIf="props.label && props.hideLabel !== true">
       <nz-form-label
         [nzRequired]="props.required"
@@ -112,7 +124,7 @@
 <!-- SHARED COMPONENT TEMPLATES -->
 <!-- displays the field value description -->
 <ng-template #descriptionTpl>
-  <div class="cvc-form-field-description">
+  <div class="form-field-description">
     <ng-container [ngSwitch]="props.extraType">
       <span
         *ngSwitchCase="'prompt'"
