mp-select's model value & tag synchronized w/ mp-exp-editor

--- a/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.html
+++ b/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.html
@@ -36,6 +36,7 @@
     nzSpan="24"
     *ngIf="showExp$ | ngrxPush as showExp">
     <cvc-mp-expression-editor
+      [cvcPrepopulateWithId]="onMpId$ | ngrxPush"
       (cvcOnSelect)="onMpSelect$.next($event)"></cvc-mp-expression-editor>
   </nz-col>
 </nz-row>
