more form-field.wrapper fixes

--- a/client/src/app/forms2/wrappers/form-field/form-field.wrapper.less
+++ b/client/src/app/forms2/wrappers/form-field/form-field.wrapper.less
@@ -73,17 +73,17 @@
 
 .cvc-form-field-validation,
 .form-field-description {
-  // // ensure consistent height of description, validation message line
-  // min-height: 16px;
-  // line-height: 1.2;
-  // font-size: 95%;
-  // margin-top: 4px;
-  // .extra-prompt {
-  //   font-weight: 600;
-  // }
-  // .extra-description {
-  //   font-style: oblique;
-  // }
+  // ensure consistent height of description, validation message line
+  min-height: 16px;
+  line-height: 1.2;
+  // font-size: 96%;
+  margin-top: 4px;
+  .extra-prompt {
+    font-weight: 400;
+  }
+  .extra-description {
+    font-style: oblique;
+  }
 }
 
 .cvc-form-field-validation {
