--- a/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.less
+++ b/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.less
@@ -2,3 +2,13 @@ form,
 formly-form {
   width: 100%;
 }
+.expression-button {
+  span.hide {
+    transform: rotate(0deg);
+    transition: transform .2s linear;
+  }
+  span.show {
+    transform: rotate(90deg);
+    transition: transform .2s linear;
+  }
+}
