--- a/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
@@ -1,7 +1,7 @@
 :host {
     display: block;
-    background-color: #FCFCFC;
-    border: 1px solid #CCCCCC;
+    background-color: #F6F6F6;
+    border: 1px solid #DEDEDE;
     border-radius: 4px;
     padding: 8px;
 }
