--- a/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.less
+++ b/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.less
@@ -5,10 +5,15 @@ formly-form {
 .expression-button {
   span.hide {
     transform: rotate(0deg);
-    transition: transform .2s linear;
+    transition: transform 0.2s linear;
   }
   span.show {
     transform: rotate(90deg);
-    transition: transform .2s linear;
+    transition: transform 0.2s linear;
   }
+}
+.editor-message {
+  padding: 3px;
+  border: 1px solid #cccccc;
+  border-radius: 2px;
 }
