source-select hides source type select if source has been selected

--- a/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.html
+++ b/client/src/app/forms2/types/molecular-profile-select/molecular-profile-select.type.html
@@ -29,7 +29,7 @@
         [cvcOptions]="selectOption$ | ngrxPush"
         [cvcShowError]="showError"
         [cvcLoading]="isLoading$ | ngrxPush"
-        [cvcBorderless]="true"
+        [cvcBorderless]="false"
         [cvcSuffixIcon]="null"
         [cvcShowArrow]="false"
         (cvcOnSearch)="onSearch$.next($event)"
