--- a/client/src/app/forms2/types/source-select/source-select.type.html
+++ b/client/src/app/forms2/types/source-select/source-select.type.html
@@ -1,5 +1,7 @@
 <nz-row [nzGutter]="[6, 6]">
-  <nz-col nzFlex="80px">
+  <nz-col
+    nzFlex="100px"
+    *ngIf="showTypeSelect$ | ngrxPush">
     <nz-select
       nzSize="default"
       nzBlock
@@ -18,7 +20,8 @@
     </nz-select>
   </nz-col>
   <nz-col
-    nzFlex="1 1 auto"
+    *ngIf="showTypeSelect$ | ngrxPush"
+    nzFlex="60px"
     class="prefix">
     <ng-container [ngSwitch]="sourceType$ | ngrxPush">
       <div *ngSwitchCase="'PUBMED'">PMID:</div>
